Fixed findbugs warning.